applications/openlookeng-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-website
  name: openlookeng-website
