applications/openlookeng-website/cibot-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: openlookeng-bot-internal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 31202
---
kind: Endpoints
apiVersion: v1
metadata:
  name: openlookeng-bot-internal
subsets:
  - addresses:
      # These machines below are cluster workers in openlookeng cluster.
      - ip: 10.0.0.107
      - ip: 10.0.0.191
    ports:
      - port: 31202
