applications/openlookeng-website/openlookeng-website-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openlookeng-website-frontend-service
spec:
  type: ExternalName
  externalName: openlookeng-website-frontend-service.openlookeng-website-frontend.svc.cluster.local
